# gnome-settings-daemon

./: configure.ac
data/: Makefile.am  org.gnome.settings-daemon.plugins.gschema.xml.in.in
plugins/: Makefile.am
plugins/updates/: Makefile.am  gsd-updates-common.h  gsd-updates-manager.c  main.c  org.gnome.SettingsDaemon.Updates.desktop.in  org.gnome.settings-daemon.plugins.update.policy  pk-offline-clear-update.c
po/: POTFILES.in  POTFILES.skip
